--- a/notebooks/Exploring Quarry, a Service to Run SQL Queries against Wikipedia.ipynb
+++ b/notebooks/Exploring Quarry, a Service to Run SQL Queries against Wikipedia.ipynb
@@ -653,7 +653,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -667,9 +667,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
